--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -87,7 +87,7 @@ body {
     background-position: right;
     transition: ease-in-out 0.3s;
     z-index: 2;
-    background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 72%, rgba(252,176,69,1) 100%);
+    background-color: rgb(168, 168, 168);
 }
 
 .container__image:before {
